@@ -1,5 +1,8 @@
 2014-02-05  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* nnimap.el (nnimap-request-articles): New command to download several
+	articles at once.
+
 	* gnus.el (gnus-variable-list): Save Cloud variables.
 
 	* gnus-int.el (gnus-request-accept-article): Doc fix.
